automata_verilogParser.py
# Generated from automata_verilog.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class automata_verilogParser ( Parser ):

    grammarFileName = "automata_verilog.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'['", "':'", "']'", 
                     "'='", "'always'", "'@'", "'or'", "'posedge'", "'begin'", 
                     "'end'", "'if'", "'else'", "'=='", "'<='", "'~'", "'|'", 
                     "'&'", "'{'", "'}'", "'module'", "'endmodule'", "<INVALID>", 
                     "'assign'", "'.'", "';'", "<INVALID>", "<INVALID>", 
                     "'1'b'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "MODULE_MARK", 
                      "END_MODULE_MARK", "NODE_TYPE", "ASSIGN_MARK", "INSTANCE_CONNECTION", 
                      "LINE_END", "NUM", "NAME", "BYTE_MARK", "WS" ]

    RULE_verilog_design = 0
    RULE_module_lines = 1
    RULE_module_define = 2
    RULE_end_module = 3
    RULE_module_pins = 4
    RULE_node_define = 5
    RULE_node_define_list = 6
    RULE_assign_define = 7
    RULE_always_edge = 8
    RULE_always_level = 9
    RULE_edge_situation = 10
    RULE_level_situation = 11
    RULE_begin_proc = 12
    RULE_if_proc = 13
    RULE_eq_situation = 14
    RULE_blocked_connect = 15
    RULE_non_blocked_connect = 16
    RULE_expr = 17
    RULE_instance_define = 18
    RULE_pin_connection_with_dot = 19
    RULE_with_dot_connection = 20
    RULE_pin_connection_wo_dot = 21
    RULE_wo_dot_connection = 22
    RULE_node_name = 23
    RULE_bus_name = 24

    ruleNames =  [ "verilog_design", "module_lines", "module_define", "end_module", 
                   "module_pins", "node_define", "node_define_list", "assign_define", 
                   "always_edge", "always_level", "edge_situation", "level_situation", 
                   "begin_proc", "if_proc", "eq_situation", "blocked_connect", 
                   "non_blocked_connect", "expr", "instance_define", "pin_connection_with_dot", 
                   "with_dot_connection", "pin_connection_wo_dot", "wo_dot_connection", 
                   "node_name", "bus_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    MODULE_MARK=23
    END_MODULE_MARK=24
    NODE_TYPE=25
    ASSIGN_MARK=26
    INSTANCE_CONNECTION=27
    LINE_END=28
    NUM=29
    NAME=30
    BYTE_MARK=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Verilog_designContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_lines(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(automata_verilogParser.Module_linesContext)
            else:
                return self.getTypedRuleContext(automata_verilogParser.Module_linesContext,i)


        def getRuleIndex(self):
            return automata_verilogParser.RULE_verilog_design

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerilog_design" ):
                listener.enterVerilog_design(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerilog_design" ):
                listener.exitVerilog_design(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVerilog_design" ):
                return visitor.visitVerilog_design(self)
            else:
                return visitor.visitChildren(self)




    def verilog_design(self):

        localctx = automata_verilogParser.Verilog_designContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_verilog_design)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.module_lines()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << automata_verilogParser.T__7) | (1 << automata_verilogParser.MODULE_MARK) | (1 << automata_verilogParser.END_MODULE_MARK) | (1 << automata_verilogParser.NODE_TYPE) | (1 << automata_verilogParser.ASSIGN_MARK) | (1 << automata_verilogParser.NAME))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_linesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_define(self):
            return self.getTypedRuleContext(automata_verilogParser.Module_defineContext,0)


        def node_define(self):
            return self.getTypedRuleContext(automata_verilogParser.Node_defineContext,0)


        def assign_define(self):
            return self.getTypedRuleContext(automata_verilogParser.Assign_defineContext,0)


        def always_edge(self):
            return self.getTypedRuleContext(automata_verilogParser.Always_edgeContext,0)


        def always_level(self):
            return self.getTypedRuleContext(automata_verilogParser.Always_levelContext,0)


        def instance_define(self):
            return self.getTypedRuleContext(automata_verilogParser.Instance_defineContext,0)


        def end_module(self):
            return self.getTypedRuleContext(automata_verilogParser.End_moduleContext,0)


        def getRuleIndex(self):
            return automata_verilogParser.RULE_module_lines

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_lines" ):
                listener.enterModule_lines(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_lines" ):
                listener.exitModule_lines(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_lines" ):
                return visitor.visitModule_lines(self)
            else:
                return visitor.visitChildren(self)




    def module_lines(self):

        localctx = automata_verilogParser.Module_linesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module_lines)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.module_define()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.node_define()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.assign_define()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.always_edge()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.always_level()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.instance_define()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 61
                self.end_module()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_defineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODULE_MARK(self):
            return self.getToken(automata_verilogParser.MODULE_MARK, 0)

        def NAME(self):
            return self.getToken(automata_verilogParser.NAME, 0)

        def module_pins(self):
            return self.getTypedRuleContext(automata_verilogParser.Module_pinsContext,0)


        def LINE_END(self):
            return self.getToken(automata_verilogParser.LINE_END, 0)

        def getRuleIndex(self):
            return automata_verilogParser.RULE_module_define

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_define" ):
                listener.enterModule_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_define" ):
                listener.exitModule_define(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_define" ):
                return visitor.visitModule_define(self)
            else:
                return visitor.visitChildren(self)




    def module_define(self):

        localctx = automata_verilogParser.Module_defineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module_define)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(automata_verilogParser.MODULE_MARK)
            self.state = 65
            self.match(automata_verilogParser.NAME)
            self.state = 66
            self.match(automata_verilogParser.T__0)
            self.state = 67
            self.module_pins()
            self.state = 68
            self.match(automata_verilogParser.T__1)
            self.state = 69
            self.match(automata_verilogParser.LINE_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class End_moduleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def END_MODULE_MARK(self):
            return self.getToken(automata_verilogParser.END_MODULE_MARK, 0)

        def getRuleIndex(self):
            return automata_verilogParser.RULE_end_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd_module" ):
                listener.enterEnd_module(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd_module" ):
                listener.exitEnd_module(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnd_module" ):
                return visitor.visitEnd_module(self)
            else:
                return visitor.visitChildren(self)




    def end_module(self):

        localctx = automata_verilogParser.End_moduleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_end_module)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(automata_verilogParser.END_MODULE_MARK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_pinsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return automata_verilogParser.RULE_module_pins

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Module_pin_single_pinContext(Module_pinsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a automata_verilogParser.Module_pinsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(automata_verilogParser.NAME)
            else:
                return self.getToken(automata_verilogParser.NAME, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_pin_single_pin" ):
                listener.enterModule_pin_single_pin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_pin_single_pin" ):
                listener.exitModule_pin_single_pin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_pin_single_pin" ):
                return visitor.visitModule_pin_single_pin(self)
            else:
                return visitor.visitChildren(self)



    def module_pins(self):

        localctx = automata_verilogParser.Module_pinsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_module_pins)
        try:
            localctx = automata_verilogParser.Module_pin_single_pinContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 73
                    self.match(automata_verilogParser.NAME)
                    self.state = 74
                    self.match(automata_verilogParser.T__2) 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 80
            self.match(automata_verilogParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_defineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return automata_verilogParser.RULE_node_define

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Node_bus_defineContext(Node_defineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a automata_verilogParser.Node_defineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NODE_TYPE(self):
            return self.getToken(automata_verilogParser.NODE_TYPE, 0)
        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(automata_verilogParser.NUM)
            else:
                return self.getToken(automata_verilogParser.NUM, i)
        def NAME(self):
            return self.getToken(automata_verilogParser.NAME, 0)
        def LINE_END(self):
            return self.getToken(automata_verilogParser.LINE_END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_bus_define" ):
                listener.enterNode_bus_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_bus_define" ):
                listener.exitNode_bus_define(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNode_bus_define" ):
                return visitor.visitNode_bus_define(self)
            else:
                return visitor.visitChildren(self)


    class Node_pin_defineContext(Node_defineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a automata_verilogParser.Node_defineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NODE_TYPE(self):
            return self.getToken(automata_verilogParser.NODE_TYPE, 0)
        def node_define_list(self):
            return self.getTypedRuleContext(automata_verilogParser.Node_define_listContext,0)

        def LINE_END(self):
            return self.getToken(automata_verilogParser.LINE_END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_pin_define" ):
                listener.enterNode_pin_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_pin_define" ):
                listener.exitNode_pin_define(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNode_pin_define" ):
                return visitor.visitNode_pin_define(self)
            else:
                return visitor.visitChildren(self)



    def node_define(self):

        localctx = automata_verilogParser.Node_defineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_node_define)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = automata_verilogParser.Node_bus_defineContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(automata_verilogParser.NODE_TYPE)
                self.state = 83
                self.match(automata_verilogParser.T__3)
                self.state = 84
                self.match(automata_verilogParser.NUM)
                self.state = 85
                self.match(automata_verilogParser.T__4)
                self.state = 86
                self.match(automata_verilogParser.NUM)
                self.state = 87
                self.match(automata_verilogParser.T__5)
                self.state = 88
                self.match(automata_verilogParser.NAME)
                self.state = 89
                self.match(automata_verilogParser.LINE_END)
                pass

            elif la_ == 2:
                localctx = automata_verilogParser.Node_pin_defineContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(automata_verilogParser.NODE_TYPE)
                self.state = 91
                self.node_define_list()
                self.state = 92
                self.match(automata_verilogParser.LINE_END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_define_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return automata_verilogParser.RULE_node_define_list

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Single_node_in_node_defineContext(Node_define_listContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a automata_verilogParser.Node_define_listContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(automata_verilogParser.NAME)
            else:
                return self.getToken(automata_verilogParser.NAME, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_node_in_node_define" ):
                listener.enterSingle_node_in_node_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_node_in_node_define" ):
                listener.exitSingle_node_in_node_define(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_node_in_node_define" ):
                return visitor.visitSingle_node_in_node_define(self)
            else:
                return visitor.visitChildren(self)



    def node_define_list(self):

        localctx = automata_verilogParser.Node_define_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_node_define_list)
        try:
            localctx = automata_verilogParser.Single_node_in_node_defineContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 96
                    self.match(automata_verilogParser.NAME)
                    self.state = 97
                    self.match(automata_verilogParser.T__2) 
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 103
            self.match(automata_verilogParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_defineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN_MARK(self):
            return self.getToken(automata_verilogParser.ASSIGN_MARK, 0)

        def node_name(self):
            return self.getTypedRuleContext(automata_verilogParser.Node_nameContext,0)


        def expr(self):
            return self.getTypedRuleContext(automata_verilogParser.ExprContext,0)


        def LINE_END(self):
            return self.getToken(automata_verilogParser.LINE_END, 0)

        def getRuleIndex(self):
            return automata_verilogParser.RULE_assign_define

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_define" ):
                listener.enterAssign_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_define" ):
                listener.exitAssign_define(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_define" ):
                return visitor.visitAssign_define(self)
            else:
                return visitor.visitChildren(self)




    def assign_define(self):

        localctx = automata_verilogParser.Assign_defineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assign_define)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(automata_verilogParser.ASSIGN_MARK)
            self.state = 106
            self.node_name()
            self.state = 107
            self.match(automata_verilogParser.T__6)
            self.state = 108
            self.expr(0)
            self.state = 109
            self.match(automata_verilogParser.LINE_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Always_edgeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edge_situation(self):
            return self.getTypedRuleContext(automata_verilogParser.Edge_situationContext,0)


        def begin_proc(self):
            return self.getTypedRuleContext(automata_verilogParser.Begin_procContext,0)


        def getRuleIndex(self):
            return automata_verilogParser.RULE_always_edge

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlways_edge" ):
                listener.enterAlways_edge(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlways_edge" ):
                listener.exitAlways_edge(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlways_edge" ):
                return visitor.visitAlways_edge(self)
            else:
                return visitor.visitChildren(self)




    def always_edge(self):

        localctx = automata_verilogParser.Always_edgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_always_edge)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(automata_verilogParser.T__7)
            self.state = 112
            self.match(automata_verilogParser.T__8)
            self.state = 113
            self.match(automata_verilogParser.T__0)
            self.state = 114
            self.edge_situation(0)
            self.state = 115
            self.match(automata_verilogParser.T__1)
            self.state = 116
            self.begin_proc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Always_levelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def level_situation(self):
            return self.getTypedRuleContext(automata_verilogParser.Level_situationContext,0)


        def begin_proc(self):
            return self.getTypedRuleContext(automata_verilogParser.Begin_procContext,0)


        def getRuleIndex(self):
            return automata_verilogParser.RULE_always_level

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlways_level" ):
                listener.enterAlways_level(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlways_level" ):
                listener.exitAlways_level(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlways_level" ):
                return visitor.visitAlways_level(self)
            else:
                return visitor.visitChildren(self)




    def always_level(self):

        localctx = automata_verilogParser.Always_levelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_always_level)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(automata_verilogParser.T__7)
            self.state = 119
            self.match(automata_verilogParser.T__8)
            self.state = 120
            self.match(automata_verilogParser.T__0)
            self.state = 121
            self.level_situation(0)
            self.state = 122
            self.match(automata_verilogParser.T__1)
            self.state = 123
            self.begin_proc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Edge_situationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return automata_verilogParser.RULE_edge_situation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Edge_clock_triggerContext(Edge_situationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a automata_verilogParser.Edge_situationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def node_name(self):
            return self.getTypedRuleContext(automata_verilogParser.Node_nameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge_clock_trigger" ):
                listener.enterEdge_clock_trigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge_clock_trigger" ):
                listener.exitEdge_clock_trigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdge_clock_trigger" ):
                return visitor.visitEdge_clock_trigger(self)
            else:
                return visitor.visitChildren(self)


    class Multi_edge_triggerContext(Edge_situationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a automata_verilogParser.Edge_situationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def edge_situation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(automata_verilogParser.Edge_situationContext)
            else:
                return self.getTypedRuleContext(automata_verilogParser.Edge_situationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulti_edge_trigger" ):
                listener.enterMulti_edge_trigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulti_edge_trigger" ):
                listener.exitMulti_edge_trigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulti_edge_trigger" ):
                return visitor.visitMulti_edge_trigger(self)
            else:
                return visitor.visitChildren(self)



    def edge_situation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = automata_verilogParser.Edge_situationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_edge_situation, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = automata_verilogParser.Edge_clock_triggerContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 126
            self.match(automata_verilogParser.T__10)
            self.state = 127
            self.node_name()
            self._ctx.stop = self._input.LT(-1)
            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = automata_verilogParser.Multi_edge_triggerContext(self, automata_verilogParser.Edge_situationContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_edge_situation)
                    self.state = 129
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 130
                    self.match(automata_verilogParser.T__9)
                    self.state = 131
                    self.edge_situation(3) 
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Level_situationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return automata_verilogParser.RULE_level_situation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Level_clock_triggerContext(Level_situationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a automata_verilogParser.Level_situationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def node_name(self):
            return self.getTypedRuleContext(automata_verilogParser.Node_nameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLevel_clock_trigger" ):
                listener.enterLevel_clock_trigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLevel_clock_trigger" ):
                listener.exitLevel_clock_trigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLevel_clock_trigger" ):
                return visitor.visitLevel_clock_trigger(self)
            else:
                return visitor.visitChildren(self)


    class Multi_level_triggerContext(Level_situationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a automata_verilogParser.Level_situationContext
            super().__init__(parser)
            self.copyFrom(ctx)
